sleeveless shirts added and design not showing in mobile bug fixed

--- a/src/App.css
+++ b/src/App.css
@@ -308,7 +308,19 @@ body {
   align-items: center;
   gap: 50px;
 }
-
+.jdjfdjv{
+  position: relative;
+  width: 100vw;
+  height: 100vh;
+  top: 30px;
+  /* background-color: red; */
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
+  gap: 180px;
+}
 .jenfkjfrf {
   position: relative;
   top: 80px;
@@ -688,7 +700,7 @@ body {
   }
 }
 @media screen and (max-width: 1439px) {
-.jefkeklf,.fgfhhgjjh{
+.jefkeklf{
   display: none;
 }
 }
